# OGRaidManager

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  build.bat  build.sh  compose.yaml  diesel.toml  requirements.txt  setup.bat  setup.sh
crates/lib/fusion-util/: Cargo.toml  fusion-util.rs
crates/lib/ogrm/: Cargo.toml  config.rs  diesel.toml  ogrm.rs
crates/lib/ogrm/db/: db.rs
crates/lib/ogrm/db/pg/: pg.rs
crates/lib/ogrm/guild/: model.rs  schema.rs
migrations/2024-05-28-041957_guilds/: down.sql  up.sql
resources/: config.example.json  config.json  secrets.example.json
