[package]
name = "ogrm"
version = "0.1.0"
authors = ["Lance Wallis <walance@pvas.me>"]
edition = "2021"

[lib]
crate-type=["dylib"]
path = "ogrm.rs"

[dependencies]
fusion-util = { path = "../../lib/fusion-util" }

serde = "1.0.197"
serde_json = "1.0.115"
diesel = { version = "2.1.5", features = ["postgres"] }
diesel_migrations = { version = "2.1.0" }

serenity = { version = "0.12.1", default-features = true }
